# src/main/resources/openapi.yaml
@@ -170,6 +170,31 @@ paths:
                 $ref: "#/components/schemas/ArticleListDTO"
         '500':
           $ref: "#/components/responses/InternalServerErrorResponse"
+  /articles/{articleId}:
+    get:
+      tags: [ articles ]
+      summary: 記事の詳細を取得します
+      description: 記事の詳細を取得します
+      operationId: getArticle
+      parameters:
+        - name: articleId
+          in: path
+          description: 記事のID
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ArticleDTO"
+        '404':
+          $ref: "#/components/responses/NotFoundResponse"
+        '500':
+          $ref: "#/components/responses/InternalServerErrorResponse"
 components:
   schemas:
     InternalServerError:
@@ -267,6 +292,23 @@ components:
           type: string
           format: uri
           example: /articles
+    NotFound:
+      description: リソースが見つかりません
+      type: object
+      properties:
+        title:
+          type: string
+          default: "NotFound"
+        status:
+          type: integer
+          format: int32
+          default: 404
+        detail:
+          type: string
+        instance:
+          type: string
+          format: uri
+          example: /articles/123
     UserForm:
       type: object
       required:
@@ -380,6 +422,12 @@ components:
         application/problem+json:
           schema:
             $ref: "#/components/schemas/Forbidden"
+    NotFoundResponse:
+      description: NotFound
+      content:
+        application/problem+json:
+          schema:
+            $ref: "#/components/schemas/NotFound"
   securitySchemes:
     csrfProtectionHeader:
       description: >
